--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
     </main>
 
     <footer>
-        <p>&copy; copyrights are for everyone. 2019. All rights reserved</p>
+        <div class="fixed">
+            <p>&copy; copyrights are for everyone. 2019. All rights reserved</p>
+        </div>
     </footer>
 
     <script src="js/main.js"></script>
